# oriented_object_detedtion

./: CMakeLists.txt  README.md  yololayer.cu  yololayer.h  yolov5.cpp
